Update catalog title and PDF file reference

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo Interactivo - Episodio II</title>
+    <title>Catálogo Interactivo</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
     <style>
@@ -79,8 +79,8 @@
 <body>
 
     <header>
-        <h1>Episodio II: La Acción del Toro</h1>
-        <p>El Valor de las Cosas y las Personas</p>
+        <h1>ADI Arte/Diseño & Impresion</h1>
+        <p>Catálogo 2026</p>
     </header>
 
     <div id="pdf-viewer-container">
@@ -98,7 +98,7 @@
 
     <script>
         // CONFIGURACIÓN: Cambia esto por el nombre de tu archivo
-        const url = 'TU_ARCHIVO.pdf'; 
+        const url = 'CATALOGO PK IMPRESION 25-26 OK.pdf'; 
 
         // Generar QR automáticamente basado en la URL actual
         const qrImg = document.getElementById('qr-code');
@@ -140,4 +140,5 @@
         }
     </script>
 </body>
+
 </html>
