--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="controls">
-        <a href="TU_ARCHIVO.pdf" download class="btn">DESCARGAR CATÁLOGO (PDF)</a>
+        <a href="CATALOGO PK PLAYERAS-TEXTIL.pdf" download class="btn">DESCARGAR CATÁLOGO (PDF)</a>
 
         <div class="qr-container">
             <img id="qr-code" src="" alt="Código QR">
@@ -98,7 +98,7 @@
 
     <script>
         // CONFIGURACIÓN: Cambia esto por el nombre de tu archivo
-        const url = 'CATALOGO PK IMPRESION 25-26 OK.pdf'; 
+        const url = 'CATALOGO PK PLAYERAS-TEXTIL.pdf'; 
 
         // Generar QR automáticamente basado en la URL actual
         const qrImg = document.getElementById('qr-code');
@@ -142,3 +142,4 @@
 </body>
 
 </html>
+
